[tool.poetry]
name = "monthly-mercato-braintree"
version = "0.1.0"
description = "Monthly Script to pull braintree api reports"
authors = ["Lindon <lbforbesjr@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
requests = "^2.32.3"
pandas = "^2.2.3"
braintree = "^4.31.0"
python-dotenv = "^1.0.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
